K3s/website-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: romainc0/website:frontend
        ports:
        - containerPort: 80
      - name: backend
        image: romainc0/website:backend
        command: ["node", "server.js"]
        ports:
        - containerPort: 3000
